--- a/sass/_questions.sass
+++ b/sass/_questions.sass
@@ -1,4 +1,7 @@
 .question-page
+  background-color: #333333
+
+.question-page-content
   height: 100%
 
 .grid
